# keyflow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh.md  TODO.md
.github/workflows/: ci.yml  release.yml  tag-on-version-bump.yml
Formula/: keyflow.rb
docs/: ai-discover-flow.md  auth-flow-summary.md  mcp-contract.md  product-architecture.md  product-roadmap.md  provider-validation-design.md  release-checklist.md  release-rehearsal-2026-03-07.md
docs/superpowers/plans/: 2026-03-20-scoped-key-names.md
docs/superpowers/specs/: 2026-03-20-scoped-key-names-design.md
scripts/: claude-keyflow-mcp.sh  claude-keyflow-stdio-proxy.py
src/: cli.rs  commands.rs  crypto.rs  dashboard.html  dashboard.rs  db.rs  lib.rs  main.rs  mcp.rs  models.rs  paths.rs  tui.rs
src/commands/: auth.rs  helpers.rs  mod.rs  secrets.rs  setup.rs  sync.rs  vault.rs
src/mcp/: http.rs  prompts.rs  protocol.rs  service.rs  test_helpers.rs  tools.rs
src/services/: secrets.rs
tests/: cli_flow.rs  service_secrets.rs
worker/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.jsonc
worker/migrations/: 001_google_auth.sql
worker/src/: index.ts
