[package]
name = "keyflow"
version = "0.1.0"
edition = "2021"
description = "AI-Native Secret Manager - Let AI coding assistants discover and use your API keys"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.11"
console = "0.15"
comfy-table = "7"
base64 = "0.22"
dirs = "5"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
