[package]
name = "keyflow"
version = "0.3.2"
edition = "2021"
description = "Developer key vault for storing, finding, and reusing API keys across projects"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.11"
console = "0.15"
comfy-table = "7"
base64 = "0.22"
dirs = "5"
anyhow = "1"
tiny_http = "0.12"
ratatui = "0.29"
crossterm = "0.28"
atty = "0.2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "keyflow"
path = "src/main.rs"

[[bin]]
name = "kf"
path = "src/bin/kf.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
